RESOLVED FIXED 88057
Overflow scrolling doesn't need to create a stacking context is the overflow is hidden
https://bugs.webkit.org/show_bug.cgi?id=88057
Summary Overflow scrolling doesn't need to create a stacking context is the overflow ...
Adam Barth
Reported 2012-06-01 00:43:46 PDT
Overflow scrolling doesn't need to create a stacking context is the overflow is hidden
Attachments
Patch (1.28 KB, patch)
2012-06-01 00:44 PDT, Adam Barth
no flags
Patch for landing (1.30 KB, patch)
2012-06-01 13:41 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2012-06-01 00:44:14 PDT
Adam Barth
Comment 2 2012-06-01 00:45:02 PDT
This patch is in the chromium-android branch, but I'm unsure whether it's correct. If it's correct, I'd appreciate any pointers towards how to create a test for this change. Thanks!
WebKit Review Bot
Comment 3 2012-06-01 00:47:25 PDT
Attachment 145230 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Sami Kyostila
Comment 4 2012-06-01 09:36:54 PDT
I think the change makes sense, but we should check that it matches the iOS5 implementation.
Adam Barth
Comment 5 2012-06-01 09:42:53 PDT
(In reply to comment #4) > I think the change makes sense, but we should check that it matches the iOS5 implementation. Is there an easy way I can check that with my iPad?
Adam Barth
Comment 7 2012-06-01 10:56:44 PDT
Thanks James.
Adam Barth
Comment 8 2012-06-01 13:41:39 PDT
Created attachment 145372 [details] Patch for landing
WebKit Review Bot
Comment 9 2012-06-01 15:54:11 PDT
Comment on attachment 145372 [details] Patch for landing Clearing flags on attachment: 145372 Committed r119294: <http://trac.webkit.org/changeset/119294>
WebKit Review Bot
Comment 10 2012-06-01 15:54:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.