Overflow scrolling doesn't need to create a stacking context is the overflow is hidden https://bugs.webkit.org/show_bug.cgi?id=88057

Reviewed by James Robinson.

This patch causes us to match the iOS implementation of this feature.

* css/StyleResolver.cpp:
(WebCore::StyleResolver::collectMatchingRulesForList):


Canonical link: https://commits.webkit.org/105970@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119294 268f45cc-cd09-0410-ab3c-d52691b4dbfc